--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Application Title -->
+    <title>React App</title>
+
+    <!-- Meta Information -->
+    <meta name="description" content="React-based App Graph Builder application" />
+    <meta name="author" content="Anuja Shirahatti" />
+
+    <!-- Open Graph (for social sharing) -->
+    <meta property="og:title" content="React App" />
+    <meta property="og:description" content="Interactive React application built with modern web technologies" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="React App" />
+    <meta name="twitter:description" content="Interactive React application built with modern web technologies" />
   </head>
 
   <body>
@@ -24,3 +28,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
